--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,10 +1,10 @@
 <br><br>
-<center><h2 style="font-family: 'Cabin', sans-serif;"><strong><span style="color:#5ca05b; font-size: 1.5em; font-style: italic; font-family: 'Fira Sans', sans-serif;">Estatify</span></strong> Rent a unique land and enjoy it as if it was your own!</h2></center>
+<center><h2 style="font-family: 'Cabin', sans-serif;"><strong><span style="color:#5ca05b; font-size: 1.5em; font-style: italic; font-family: 'Fira Sans', sans-serif;">Estatify</span></strong> Search and rent fields for cultivation or to host events!</h2></center>
 <br><br>
 <%= form_tag search_path, method: :get do %>
 	<div class="row">
 		<div class="col-md-6">
-			<%= text_field_tag :search, params[:search], placeholder: "Where would you like to invest?", class: "form-control" %>
+			<%= text_field_tag :search, params[:search], placeholder: "Location", class: "form-control" %>
 		</div>
 		<div class="col-md-2">
 			<%= text_field_tag :start_date, params[:start_date], placeholder: "Start Date", class: "form-control" %>
@@ -45,15 +45,15 @@
 
 <div class="text-center">
 	<h2 style="color: #5CA05B"><strong>During this month</strong></h2>
-	<p style="color: ##BBD7AF">Discover ideal territories and make your dreams come true</p>
+	<p style="color: ##BBD7AF">Discover ideal locations and make your dreams come true</p>
 </div>
 
 <br>
 
 <div class="row">
 	<div class="col-md-4 col-sm-12">
-		<a href="http://estatify.mitzelos.com/search?utf8=%E2%9C%93&search=peloponisos">
-			<div class="discovery-card" style="background-image: url('https://s3-eu-west-1.amazonaws.com/estatify/home1.jpg')">
+		<a href="http://127.0.0.1:3000/search?utf8=%E2%9C%93&search=peloponisos">
+			<div class="discovery-card" style="background-image: url('https://s3-eu-west-1.amazonaws.com/elasticbeanstalk-eu-west-1-312549105286/green-rice-field.jpg')">
 				<div class="va-container">
 					<div class="va-middle text-center">
 						<h2><strong>Peloponnese</strong></h2>
@@ -64,8 +64,8 @@
 	</div>
 
 	<div class="col-md-4 col-sm-6">
-		<a href="http://estatify.mitzelos.com/search?utf8=%E2%9C%93&search=samos">
-			<div class="discovery-card" style="background-image: url('https://s3-eu-west-1.amazonaws.com/estatify/home2.jpg')">
+		<a href="http://127.0.0.1:3000/search?utf8=%E2%9C%93&search=samos">
+			<div class="discovery-card" style="background-image: url('https://s3-eu-west-1.amazonaws.com/elasticbeanstalk-eu-west-1-312549105286/open_fields_headvisual-graded.jpg')">
 				<div class="va-container">
 					<div class="va-middle text-center">
 						<h2><strong>Samos</strong></h2>
@@ -76,8 +76,8 @@
 	</div>
 
 	<div class="col-md-4 col-sm-6">
-		<a href="http://estatify.mitzelos.com/search?utf8=%E2%9C%93&search=Epirus">
-			<div class="discovery-card" style="background-image: url('https://s3-eu-west-1.amazonaws.com/estatify/home3.jpg')">
+		<a href="http://127.0.0.1:3000/search?utf8=%E2%9C%93&search=Epirus">
+			<div class="discovery-card" style="background-image: url('https://s3-eu-west-1.amazonaws.com/elasticbeanstalk-eu-west-1-312549105286/mountain-fields.jpg')">
 				<div class="va-container">
 					<div class="va-middle text-center">
 						<h2><strong>Epirus</strong></h2>
