Change attributes in listings

--- a/app/views/properties/_form.html.erb
+++ b/app/views/properties/_form.html.erb
@@ -23,22 +23,22 @@
       <div class="row">
         <div class="col-md-4 select">
           <div class="form-group">
-            <label>Type</label>
-            <%= f.select :space_type, [["For cultivation","For cultivation"], ["For events","For events"]], id: "space_type", prompt: "Select...", class: "form-control" %>
+            <label>Content</label>
+            <%= f.select :space_type, [["Δενδρωδεις","Δενδρωδεις"], ["Αμπέλια","Αμπέλια"], ["Βοσκωτόπους","Βοσκωτόπους"]], id: "space_type", prompt: "Select...", class: "form-control" %>
           </div>
         </div>
 
         <div class="col-md-4 select">
           <div class="form-group">
-            <label>Category</label>
-            <%= f.select :category, [["Blank","Blank"], ["Cultivable","Cultivable"], ["With trees","With trees"]], prompt: "Select...", class: "form-control" %>
+            <label>Ground</label>
+            <%= f.select :category, [["Αρδευόμενα","Αρδευόμενα"], ["Ξηρικά","Ξηρικά"]], prompt: "Select...", class: "form-control" %>
           </div>
         </div>
 
         <div class="col-md-4 select">
           <div class="form-group">
             <label>Main Ground Type</label>
-            <%= f.select :ground_type, [["Gazon","Gazon"], ["Concrete","Concrete"], ["Soil","Soil"]], prompt: "Select...", class: "form-control" %>
+            <%= f.select :ground_type, [["Ορεινό","Ορεινό"], ["Ημι-ορεινό","Ημι-ορεινό"], ["Πεδινό","Πεδινό"], ["Προστατευόμενη Περιοχή","Προστατευόμενη Περιοχή"]], prompt: "Select...", class: "form-control" %>
           </div>
         </div>
       </div>
@@ -47,7 +47,7 @@
         <div class="col-md-4 select">
           <div class="form-group">
             <label>Flatness</label>
-            <%= f.select :flatness, [["Mountain side","Mountain Side"], ["Flat","Flat"], ["Flat with small hills","Flat with small hills"]], prompt: "Select...", class: "form-control" %>
+            <%= f.select :flatness, [["0%","0%"], ["5%","5%"], ["8%","8%"]], prompt: "Select...", class: "form-control" %>
           </div>
         </div>
 
