Various frontend fixes

--- a/app/views/properties/show.html.erb
+++ b/app/views/properties/show.html.erb
@@ -50,6 +50,11 @@
                 <i class="fa fa-delicious fa-2x"></i>
       		      <p><%= @property.dimensions.to_i %> τ.μ.</p>
               </div>
+              <div class="col-sm-2">
+                <i style="color:orange"class="fa fa-sun-o fa-2x"></i>
+      		      <p>Sunny</p>
+                <a href="">View historical data..</a>
+              </div>
             </div>
           </div>
         </div>
